--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "angular-messages": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-aria": "^1.3.0",
+    "angular-material": "0.7.0-rc1-master-84842ff",
+    "angular-material-icons": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
