--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "myapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "dgeni": "^0.4.1"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -24,6 +26,7 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
+    "gulp": "^3.8.10",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "karma-jasmine": "^0.3.5",
