--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 node_modules
-dist
+
 .tmp
 .sass-cache
 bower_components
-
-test/
-scripts/
-node_modules/
-bower_components/
-app/
-.tmp/
+test
+scripts
+app
