--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-aria": "^1.3.0",
+    "angular-scroll": "^1.3.0",
     "angular-material": "^0.8.3",
     "angular-material-icons": "^0.4.0"
   },
